--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,25 +1,39 @@
-name: generate snake
+name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 0 * * *"   # her gece 00:00 UTC
+  workflow_dispatch:       # elle tetikleme
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v3
+      - name: Generate DARK snake
+        uses: Platane/snk@v3
         with:
           github_user_name: akutayural
-          outputs: |
-            dist/snake-dark.svg?palette=github-dark
-            dist/snake-light.svg?palette=github-light
+          outputs: dist/snake-dark.svg
           args: |
+            --palette=github-dark
             --color_snake=#00ffcc
             --color_dots=#1a1a1a,#2e2e2e,#404040,#585858,#6a6a6a
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+
+      - name: Generate LIGHT snake
+        uses: Platane/snk@v3
+        with:
+          github_user_name: akutayural
+          outputs: dist/snake-light.svg
+          args: |
+            --palette=github-light
+            --color_snake=#00bfa5
+            --color_dots=#e6e6e6,#d9d9d9,#cccccc,#bfbfbf,#b3b3b3
+
+      - name: List built files (debug)
+        run: ls -la dist
+
+      - name: Publish to output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
